# bevy_bor3d

./: CHANGELOG.md  CREDITS.md  Cargo.toml  README.md
assets/: billboard.wgsl
examples/: README.md  demo.rs  sprite_3d.rs
src/: lib.rs
src/render/: billboard.wgsl  draw.rs  extract.rs  mod.rs  pipeline.rs  prepare.rs  queue.rs
