[package]
name = "bevy_bor3d"
version = "0.1.0"
edition = "2021"

[dependencies]
#TODO: Remove bevy_pbr if I use my own mesh and uniform
bevy = { version = "0.14", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_core_pipeline"] }

[dev-dependencies]
bevy = "0.14"
bevy_flycam = "0.14"
bevy-inspector-egui = "0.25"

[[example]]
name = "sprite_3d"
path = "examples/sprite_3d.rs"

[[example]]
name = "sprite_3d_directions"
path = "examples/sprite_3d_directions.rs"

[[example]]
name = "text"
path = "examples/text.rs"