[package]
name = "bevy_bor3d"
version = "0.1.0"
edition = "2021"

[dependencies]
#TODO: Remove bevy_pbr if I use my own mesh and uniform
bevy = "0.15"

[dev-dependencies]
bevy = "0.15"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "sprite_3d"
path = "examples/sprite_3d.rs"

[[example]]
name = "sprite_3d_directions"
path = "examples/sprite_3d_directions.rs"

[[example]]
name = "text"
path = "examples/text.rs"